Added goal's endDate to goaltodos GET route + swag
